--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,6 @@ auto: true # automatically update your jekyll
 server: true # runs a local server
 paginate: 10 # pagination basted on number of posts
 exclude: ["Gemfile", "Gemfile.lock", "README.md", 'sass', 'watch.sh', 'style.scss'] # files to exclude
-url: http://jaeheeship.github.com
+url: http://jaeheeship.github.io
 sitemap:
   file: "/sitemap.xml"
