--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 
 auto: true # automatically update your jekyll
 server: true # runs a local server
+pygments: true
 paginate: 10 # pagination basted on number of posts
 exclude: ["Gemfile", "Gemfile.lock", "README.md", 'sass', 'watch.sh', 'style.scss'] # files to exclude
 url: http://jaeheeship.github.io
